Part_4/exercise 4.01/manifests/log-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-dep
  labels:
    app: log-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-dep
  template:
    metadata:
      name: log-dep
      labels:
        app: log-dep
    spec:
      volumes:
        - name: configmap-vol # Ensure this is part of an array
          configMap:          # Field name should be lowercase
            name: log-config
      containers:
        - name: log-app
          image: mo3mo3/log-app:v6
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: configmap-vol
              mountPath: /shared/information.txt
              subPath: information.txt
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 60 # How often to test
            httpGet:
              path: /fetchCount
              port: 8080
