Part_4/exercise 4.01/manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  labels:
    app: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-dep
  template:
    metadata:
      labels:
        app: pingpong-dep
    spec:
      containers:
        - name: pingpong
          image: mo3mo3/ping-pong:v5
          imagePullPolicy: IfNotPresent
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 60 # How often to test
            httpGet:
               path: /checkDb
               port: 8080
